Fixes broken layout on safari

--- a/themes/default/settings/screen.css
+++ b/themes/default/settings/screen.css
@@ -1,4 +1,7 @@
 .settings-view {
+    display: -webkit-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
